<resources>
    <string name="app_name">SethSaha</string>
    <string name="register">Register</string>
    <string name="name">"Name : "</string>
    <string name="phone">Phone No :</string>
    <string name="address">Address :</string>
    <string name="email">"Email : "</string>
    <string name="username">User Name :</string>
    <string name="password">Password :</string>
    <string name="reg">Register</string>
    <string name="image_reg">regis</string>
    <string name="bar_search">Upload Prescription</string>
    <string name="btn_home">HomeButton</string>
    <string name="img_cart_btm">bottomCart</string>
    <string name="btn_prescription">prescriptionIcon</string>
    <string name="btn_user">userButton</string>
    <string name="im_menu">menuButton</string>
    <string name="img_pills">pills</string>
    <string name="product_name">Product X</string>
    <string name="no_access">Currently you don\'t have permission to buy this item</string>
    <string name="no_access1">Please provide your prescription here !</string>
    <string name="btn_upload">UPLOAD</string>
    <string name="product" />
    <string name="product_name2">Metformin</string>
    <string name="pills">metfor</string>
    <string name="bar_search6">Prescribed Products</string>
    <string name="btn_add_more">Add more items to your cart</string>
    <string name="textView2">Your prescription now has been sent to our agent</string>
    <string name="textView6">Please wait while we approve your prescription</string>
    <string name="textValue7">A notification will be sent to you once we approved</string>
    <string name="textValue8">This might take sometime, we\'ll get back to you soon</string>
    <string name="textView9">Thankyou</string>
    <string name="aT">Your prescription now has been sent to our agent</string>
    <string name="bT">Please wait while we approve your prescription</string>
    <string name="cT">A notification will be sent to you once we approved</string>
    <string name="dT">This might take sometime, we\'ll get back to you soon</string>
    <string name="ty">Thankyou</string>
    <string name="bar_search4">Admin Prescribed Products</string>
    <string name="back"><![CDATA[< BACK]]></string>
    <string name="product1">Metformin</string>
    <string name="pres_provided">A prescription is provided !</string>
    <string name="btn_view">VIEW</string>
    <string name="btn_ga">GIVE ACCESS</string>
    <string name="pres_approved">Prescription successfully approved</string>
    <string name="btn_list">VIEW IN ITEMS</string>
    <string name="bar_search5">Notification</string>
    <string name="bar_search7">Profile Settings</string>
    <string name="myprof">My Profile</string>
    <string name="addpic">Add a new profile picture</string>
    <string name="name2">Name:</string>
    <string name="mobile2">Mobile No:</string>
    <string name="address2">Address:</string>
    <string name="email2">Email:</string>
    <string name="username2">Username:</string>
    <string name="pass2">Password:</string>
    <string name="btn_submit">Submit and save</string>
    <string name="e1">EDIT</string>
    <string name="e2">EDIT</string>
    <string name="name3">Name</string>
    <string name="mobile3">Mobile No</string>
    <string name="email3">Email</string>
    <string name="user3">UserName</string>
    <string name="pass3">Password</string>
    <string name="b1">EDIT</string>
    <string name="b3">EDIT</string>
    <string name="b4">EDIT</string>
    <string name="b5">EDIT</string>
    <string name="b6">EDIT</string>
    <string name="bar_search8">Profile Management</string>
    <string name="textView1">Vidara Methunima</string>
    <string name="editTextDate">Last visited: 12/05/2021</string>
    <string name="button10">Track your order</string>
    <string name="button21">View order history</string>
    <string name="button31">View address book</string>
    <string name="button41">View payment information</string>
    <string name="bt_reg">REGSITER</string>
    <string name="presbar">Prescribed Products</string>
</resources>