<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:backgroundTint="#00A4D2"
    tools:context=".Notification">



<TextView
            android:id="@+id/bar_btm"
            android:layout_width="415dp"
            android:layout_height="57dp"
            android:background="#00A4D2"
            android:backgroundTint="#01A4D2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bar_top"
            android:layout_width="394dp"
            android:layout_height="63dp"
            android:background="#00A4D2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/im_menu"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/im_menu"
            app:layout_constraintEnd_toStartOf="@+id/bar_search8"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu2" />

        <EditText
            android:id="@+id/bar_search8"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#00a4d2"
            android:ems="10"
            android:gravity="center"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/bar_search5"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.612"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_home1"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/btn_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/btn_user1"
            android:layout_width="38dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/btn_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_prescription1"
            app:srcCompat="@drawable/user" />

        <ImageView
            android:id="@+id/btn_prescription1"
            android:layout_width="38dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/btn_prescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_cart_btm1"
            app:srcCompat="@drawable/prescription" />

        <ImageView
            android:id="@+id/img_cart_btm1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_cart_btm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_home1"
            app:srcCompat="@drawable/cart" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="48dp"
            android:hint="@string/address"
            android:text="@string/back"
            app:layout_constraintBottom_toTopOf="@+id/product1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar_top"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="213dp"
            android:layout_height="110dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:srcCompat="@drawable/metformin" />

        <TextView
            android:id="@+id/product1"
            android:layout_width="192dp"
            android:layout_height="46dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="48dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/product1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/bar_top" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="185dp"
            android:layout_height="63dp"
            android:layout_marginTop="120dp"
            android:text="@string/btn_list"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pres_approved" />

        <TextView
            android:id="@+id/pres_approved"
            android:layout_width="257dp"
            android:layout_height="61dp"
            android:layout_marginTop="104dp"
            android:background="#E3E0E0"
            android:text="@string/pres_approved"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                        </RelativeLayout>
